# graphtradingengine

./: CMakeLists.txt  main.cpp
Component/Aggregation/: PointWindow.cpp  PointWindow.h  TimeWindow.cpp  TimeWindow.h
Core/Engine/: BacktestEngine.cpp  BacktestEngine.h  LiveEngine.cpp  LiveEngine.h
Core/Graph/: Event.cpp  Event.h  EventHandler.h  Graph.cpp  Graph.h  MarketEvent.cpp  MarketEvent.h
Core/Node/: Market.cpp  Market.h  Node.cpp  Node.h  class_Node.cpp  class_Node.h
Core/Node/Base/: HeartBeat.cpp  HeartBeat.h  MarketNode.cpp  MarketNode.h  Node.cpp  Node.h
Core/Node/Quote/: Quote.cpp  Quote.h  Vwap.cpp  Vwap.h
Core/Node/Signals/: Base.cpp  Base.h  MathNode.cpp  MathNode.h  MathSignal.cpp  MathSignal.h  OFI.cpp  OFI.h  OrberBook.cpp  OrberBook.h  OrderBookSignal.cpp  OrderBookSignal.h  SignalCollector.cpp  SignalCollector.h
Core/Streamer/: BinanceLiveOrderBookStreamer.cpp  BinanceLiveOrderBookStreamer.h  BitmexLiveOrderBookStreamer.cpp  BitmexLiveOrderBookStreamer.h  DeribitLiveOrderBookStreamer.cpp  DeribitLiveOrderBookStreamer.h  LiveStreamer.cpp  LiveStreamer.h  OkxLiveOrderBookStreamer.cpp  OkxLiveOrderBookStreamer.h  Streamer.cpp  Streamer.h
Data/DataReader/: CMEParquetToBin.cpp  CMEParquetToBin.h  CryptolakeParquetToBin.cpp  CryptolakeParquetToBin.h  ParquetDataReader.cpp  ParquetDataReader.h
Data/DataStructure/: DataStructure.h  Ladder.cpp  Ladder.h
DataReader/: DataReader.cpp  DataReader.h  class_DataReader.cpp  class_DataReader.h
Helper/: Configuration.h  DataBaseHelper.cpp  DataBaseHelper.h  DateHelper.cpp  FutureHelper.cpp  FutureHelper.h  SaphirManager.cpp  SaphirManager.h  TimeHelper.cpp  TimeHelper.h  ToolBox.cpp  ToolBox.h  class_DateHelper.cpp  class_DateHelper.h  class_FutureHelper.cpp  class_FutureHelper.h
Logger/: Logger.cpp  Logger.h  class_Logger.cpp  class_Logger.h
docs/: README.md
docs/architecture/: event-and-data-model.md  graph-and-node-model.md  project-overview.md
docs/data/: configuration.md  storage-and-converters.md
docs/development/: build-run.md  extension-playbook.md  recent-changes.md
docs/engines/: backtest.md  live.md
docs/llm/: context.yaml  glossary.md
docs/reference/: README.md
docs/reference/classes/: BackTestStreamerContainer.md  BacktestEngine.md  BacktestStreamer.md  Bary.md  BinanceLiveOrderBookStreamer.md  BitmexLiveOrderBookStreamer.md  CMEParquetToBin.md  Consumer.md  CryptolakeParquetToBin.md  DataBaseHelper.md  Date.md  DeribitLiveOrderBookStreamer.md  Event.md  FutureHelper.md  Graph.md  HeartBeat.md  HeartBeatEvent.md  LiveBootstrappedOrderBookStreamer.md  LiveEngine.md  LiveOrderBookStreamer.md  LiveOrderDeltaOrderBookStreamer.md  LiveSnapshotOrderBookStreamer.md  LiveStreamer.md  LiveUpdateDeltaOrderBookStreamer.md  Logger.md  Market.md  MarketByPriceBacktestStreamer.md  MarketByPriceEvent.md  MarketConsumer.md  MarketEvent.md  MarketStreamer.md  Mid.md  Node.md  OkxLiveOrderBookStreamer.md  OrderEvent.md  ParquetDataReader.md  Producer.md  ProducerConsumer.md  Quote.md  SaphirManager.md  (+12 more)
docs/reference/folders/: core-engine.md  core-graph.md  core-node-base.md  core-node-signals.md  core-node.md  core-streamer.md  core.md  data-datareader.md  data-datastructure.md  data.md  helper.md  logger.md  root.md  tools.md
docs/streamers/: exchanges.md  overview.md
tools/: ConvertAllMarketData.cpp
